--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,3 +9,5 @@
 <app-volunteer-section></app-volunteer-section>
 
 <app-visit-us></app-visit-us>
+
+<app-newsletter-section></app-newsletter-section>
