--- a/src/app/sections/donate-section/donate-section.component.css
+++ b/src/app/sections/donate-section/donate-section.component.css
@@ -1,5 +1,5 @@
 .donate-section {
-  background-image: url("https://spiritanimals.ro/wp-content/uploads/2023/06/328946397_3640712116205270_6528763930313679802_n.webp");
+  background-image: url("/assets/images/home-page-photo-7.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
