--- a/src/app/components/test-mode-banner/test-mode-banner.component.css
+++ b/src/app/components/test-mode-banner/test-mode-banner.component.css
@@ -6,7 +6,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100%;
+  /* width: 100%; */
   z-index: 1050; /* Asigură că este deasupra majorității elementelor */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
